--- a/index.html
+++ b/index.html
@@ -10,77 +10,72 @@
 
 <body>
 
-    <header>Welcome-To-My-Portfolio
+    <header>
         <h1>Andrew Brown</h1>
+        <img src="C:\Users\andre\Downloads\me.jpg" alt="andrews avatar"/>
         <nav>
             <ul>
                 <li>
-                    <a href="https://profile.indeed.com/?hl=en_US&co=US&from=gnav-menu-homepage">Indeed</a>
+                    <a href="#project-1">project-1  </a>
+
+                    </a>
                 </li>
                 <li>
-                    <a href="https://github.com/AndrewBrown77">Github</a>
+                    <a href="#project-2">project-2</a>
                 </li>
                 <li>
-                    <a href="https://app.slack.com/client/T074ATPBDEE/C074AUZ2RLJ">Slack</a>
+                    <a href="#project-3">project 3</a>
                 </li>
             </ul>
         </nav>
 
     </header>
-
-
-
-    <figure class="hero"></figure>
+       <figure class="hero"></figure>
     <main>
-        <article id="project-1">
-            <img src="" alt="" class="project-img" />
-            <h2>project-1</h2>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjPSrjs0bRXy8i-7wGhgyjytDqG1KYqElJsg&s"
-                alt="plants" />
-            <p>
 
-            </p>
-        </article>
-        <article id="project-2">
-            <img src="" alt="project-2" class="project-img" />
+        <section id="about">
+            <h2>projects to come </h2>
+            <p>andrew browns info</p>
+        </section>
 
-            <p>
-                I am currently in a coding bootcamp, remodeling a house, living the beach life, and working part-time.
-            </p>
-        </article>
-        <article id="project-3">
-            <img src="./assets/images/social-media-marketing.jpg" alt="project-3 class="project-img" />
-            <h2>project-3</h2>
-            <p>
-                project-3 java.js coming soon
-            </p>
-        </article>
+        <section id="projects">
+
+            <article id="project-1">
+                <img src="" alt="" class="project-img" />
+                <h3>Project 1</h3>
+       
+                <p>
+
+                </p>
+            </article>
+            <article id="project-2">
+                <img src="" alt="project-2" class="project-img" />
+
+                <p>
+                    I am currently in a coding bootcamp, remodeling a house, living the beach life, and working
+                    part-time.
+                </p>
+            </article>
+            <article id="project-3">
+                <img src="./assets/images/social-media-marketing.jpg" alt="project-3 class=" project-img" />
+                <h2>project-3</h2>
+                <p>
+                    project-3 java.js coming soon
+                </p>
+            </article>
+        </section>
+        <section id="contact">
+            <h4>Contact Me</h4>
+
+
+
+        </section>
     </main>
     <!-- <aside class="family"> -->
-        <!-- <section class="family">
-            <p>
-                growth-chart
-            </p>
-        </section>
-        <section class="family">
-            <h3>On the way up!</h3>
-            <p>
 
-            </p>
-        </section>
-        <section class="family">
-            <h4>correcting imbalances</h4>
-            <img src="./assets/images/cost-management.png" alt="nuitrient do's and dont's" />
-            <h4>Continue Growing!</h4> -->
-
-
-        <!-- </section> -->
     <!-- </aside> -->
     <footer>
         <h4>Made By AMB.</h4>
-        <p>
-            Thanks for Visiting!
-        </p>
     </footer>
 </body>
 
