--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <body>
 
     <header>
-        <h1>Andrew Brown</h1>
-        <img src="C:\Users\andre\Downloads\me.jpg" alt="andrews avatar"/>
-        <nav>
+        Andrew Brown
+        <img src="me.jpg" alt="andrews avatar" height="172">
+         <nav>
             <ul>
                 <li>
                     <a href="#project-1">project-1  </a>
-
-                    </a>
                 </li>
                 <li>
                     <a href="#project-2">project-2</a>
@@ -26,56 +24,33 @@
                 <li>
                     <a href="#project-3">project 3</a>
                 </li>
+                <li>
+                    <a href="#project-3">Contact</a>
+                </li>
             </ul>
         </nav>
-
-    </header>
+ </header>
+    <h1>projects to come </h1>
        <figure class="hero"></figure>
     <main>
-
-        <section id="about">
-            <h2>projects to come </h2>
-            <p>andrew browns info</p>
-        </section>
-
-        <section id="projects">
-
+       <section id="projects">
             <article id="project-1">
-                <img src="" alt="" class="project-img" />
-                <h3>Project 1</h3>
-       
-                <p>
-
-                </p>
+              <h2>HTML</h2>
             </article>
             <article id="project-2">
-                <img src="" alt="project-2" class="project-img" />
-
-                <p>
-                    I am currently in a coding bootcamp, remodeling a house, living the beach life, and working
-                    part-time.
-                </p>
+                <h3>CSS</h3>
             </article>
             <article id="project-3">
-                <img src="./assets/images/social-media-marketing.jpg" alt="project-3 class=" project-img" />
-                <h2>project-3</h2>
-                <p>
-                    project-3 java.js coming soon
-                </p>
+                <h4>JAVA.JS</h4>
             </article>
         </section>
-        <section id="contact">
-            <h4>Contact Me</h4>
-
-
-
-        </section>
+        
     </main>
     <!-- <aside class="family"> -->
 
     <!-- </aside> -->
     <footer>
-        <h4>Made By AMB.</h4>
+        Contact info cell:777-777-7777 email: andrew@gmail.com
     </footer>
 </body>
 
