getting back to correcting added comments to readme towards fixing the score

--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/style.css"><!--this href is the file if your drag it to the location-->
+    <link rel="stylesheet" href="./assets/style.css"><!--this href is the file if your drag it to the location-->
 
 
 </head>
 
 <body>
-
     <header>
-        Andrew Brown
-        <img src="me.jpg" alt="andrews avatar" height="172">
+        <section id="personal_image">
+            Andrew Brown
+            <img src="me.jpg" alt="andrews avatar" height="172">
+</section>
+       
          <nav>
             <ul>
                 <li>
@@ -30,11 +32,12 @@
             </ul>
         </nav>
  </header>
+ <main>
  <nav id="Project">
     <h1><a href="Project" target="_blank">Projects</a></h1>
     </article>
        <figure class="hero"></figure>
-    <main>
+  
        <section id="projects">
             <nav id="project-1">
               <h2>HTML <img src="174854.png" alt="HTML" height="227"></h2>
@@ -49,7 +52,7 @@
             <nav id="project-3">
                 <h4>JAVA.JS
                 <img src="images.png" alt="java" width="227"></h4>
-            </nav>
+            </na v>
         </section>
         
     </main>
@@ -64,3 +67,4 @@
 
 
 </html>
+
